tests/baselines/reference/classAndInterfaceWithSameName.errors.txt
==== tests/cases/conformance/classes/classDeclarations/classAndInterfaceWithSameName.ts (2 errors) ====
    class C { foo: string; }
    interface C { foo: string; } // error
              ~
!!! error TS2300: Duplicate identifier 'C'.
    
    module M {
        class D {
            bar: string;
        }
    
        interface D { // error
                  ~
!!! error TS2300: Duplicate identifier 'D'.
            bar: string;
        }
    }